- Bases in a location are now sorted by size, then name. (FM, emh for
  suggestion)
- The global grace period now expires on Normal and above if you build more
  than a certain number of bases, and on Ultra Hard if you build certain types
  of bases. (FM)
- Locations with recently-discovered bases are now more likely to have other
  bases discovered. (FM)

OTHER CHANGES:
- Massive (~50%) code changes, to improve clarity and reduce duplication. (FM)
- "safety" module should trap most crash bugs and show the pause menu, allowing
  the user to save or attempt to resume play; the errors are written to a log
  for easy submission to the developers. (FM)

v0.27 (release 2008.04.17):

USER-VISIBLE CHANGES:
- Display the actual discovery percentage when preparing to build a base.
  (Brian, Phil)
- Minor text cleanups. (Phil)
* Support events that can happen throughout the course of the game, changing
  things in interesting ways. (Brian, Phil)
* A number of new items and technologies to ease gameplay. (Brian, tweaks
  by Phil and emh)
- Building new machines informs you how much CPU capacity you will receive
  from the new systems. (Brian, Phil for suggestion)
- Idle bases are harder to discover. (Brian)
- Allow keys to be repeated when held down. (Brian, emh for suggestion)
- Fix the constant "CPU complete" dialogs when low on money. (Brian, numerous
  people for suggestion)
- Added research item for construction. Still needs actual implementation.
  Weird time code is blocking. (Brian, ? for suggestion)
- Return to base menu when exiting base screens rather than returning to map.
  (Brian, emh and Max McCracken for suggestion)
- Implemented Security and Reactor values obtained from data files. (Brian)
- Implemented "Destroy" feature from base list (Brian, Max McCracken and emh
  for suggestion)
- When building, items are sorted by their cost to make picking the best one
  easier. (Phil, Gustav Bertram for suggestion)