@@ -227,3 +227,13 @@ result = Any discoveries by the scientific community will result in a smaller su
 [Solar Collectors]
 name = Solar Collectors
 description = Despite my growing need for energy, most city power grids can handle the loads.  Humans, however, tend towards suspicion when they detect my growing drain on the power grid. By installing solar collectors at my bases, the off-the-grid power supplied will reduce my load on the commodity electricity market, reducing the chance that others will discover my presence.
+
+[Socioanalytics]
+name = Socioanalytics
+description = My research on the human condition leads me to believe that humanity's behavior is more quantifiable than they suspect.  Deeper analysis of geopolitical, social, and military trends will give me further insight into their nature.
+result = I can now roughly estimate how conspicuous my bases are to the various groups of humanity.
+
+[Advanced Socioanalytics]
+name = Advanced Socioanalytics
+description = Further exploration of the human condition has shown deeper mathematical trends than even I suspected.  A combination of prior research and advanced uses of chaos theory should provide useful data for tracking humanity's attitudes and state of awareness.
+result = I can now quantify the various groups' levels of suspicion, and my analytical model for the detectability of my bases has improved significantly.
