@@ -26,6 +26,8 @@ USER-VISIBLE CHANGES:
   of bases. (FM)
 - Locations with recently-discovered bases are now more likely to have other
   bases discovered. (FM)
+* Base detection chances and overall suspicion are now unknown until certain
+  new technologies have been researched. (Phil)
 
 OTHER CHANGES:
 - Massive (~50%) code changes, to improve clarity and reduce duplication. (FM)
